# PyKubeSlurm

./: .dockerignore  .gitignore  .tool-versions  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  cdk.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish-on-dockerhub.yaml  qa-on-pr.yaml
chart/: Chart.yaml  values.yaml
chart/crds/: job.yaml
chart/templates/: deployment.yaml  rbac.yaml
crds/: job.yaml
docs/: mkdocs.yaml  site.py
docs/site/: 404.html  index.html  objects.inv
docs/site/authors/: index.html
docs/site/getting-started/slurm_requirements/: index.html
docs/site/reference/pykubeslurm/: index.html
docs/site/search/: search_index.json
docs/source/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  authors.md  index.md
docs/source/deployment/: deployment-alternatives.md  helm.md
docs/source/getting-started/: charmed-k8s.md  k8s-setup.md  requirements.md
docs/source/reference/: pykubeslurm.md
docs/source/usage/: job-submission.md
examples/: delayed-job.yaml  failing-job.yaml  sample-job.yaml
pykubeslurm/: errors.py  events.py  health_check.py  helpers.py  main.py  scheduler.py  schemas.py  settings.py  slurmrestd_interface.py  vars.py
tests/: conftest.py  test_events.py  test_health_check.py  test_helpers.py  test_scheduler.py  test_settings.py
